// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform attributes Should transform boolean prop 1`] = `
"import { html as _html } from \\"@fract/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, {
  focused: true
}, undefined);"
`;

exports[`transform attributes Should transform different props variations 1`] = `
"import { html as _html } from \\"@fract/jsx\\";

_html(\\"div\\", \\"UniqueId\\", \\"Key\\", {
  prop1: \\"value1\\",
  prop2: 2 + 2,
  ...props
}, undefined);"
`;

exports[`transform attributes Should transform key prop 1`] = `
"import { html as _html } from \\"@fract/jsx\\";

_html(\\"div\\", \\"UniqueId\\", \\"Key\\", undefined, undefined);"
`;

exports[`transform attributes Should transform props spread 1`] = `
"import { html as _html } from \\"@fract/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, { ...props
}, undefined);"
`;

exports[`transform attributes Should transform props with expressions 1`] = `
"import { html as _html } from \\"@fract/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, {
  prop1: 1 + 1
}, undefined);"
`;

exports[`transform attributes Should transform simple props 1`] = `
"import { html as _html } from \\"@fract/jsx\\";

_html(\\"div\\", \\"UniqueId\\", undefined, {
  prop1: \\"value1\\"
}, undefined);"
`;
